--- a/BookStore/Pages/_CartLayout.cshtml
+++ b/BookStore/Pages/_CartLayout.cshtml
@@ -10,15 +10,9 @@
     <div class="bg-dark text-white p-2">
         <span class="navbar-brand ml-2">BOOK STORE</span>
     </div>
-    <div class="row m-1 p-1">
-        <div id="categories" class="col-3">
-            <vc:types></vc:types>
-        </div>
-        <div class="col-9">
-            @RenderBody()
-        </div>
+
+    <div class="m-1 p-1">
+        @RenderBody()
     </div>
-    <script src="~/lib/js/bootstrap.min.js"></script>
-    @RenderSection("Scripts", required: false)
 </body>
 </html>
