--- a/BookStore/Views/Home/Index.cshtml
+++ b/BookStore/Views/Home/Index.cshtml
@@ -6,28 +6,20 @@
 
 <h1>Books</h1>
 
-@foreach (Book b in Model.Books)
-{
-    <div class="card card-outline-primary m-1 p-1">
-        <div class="bg-faded p-1">
-            <h3>
-                @b.Title
-                <span class="badge badge-pill badge-primary" style="float:right">
-                    <small>@b.Price.ToString("c")</small>
-                </span>
-            </h3>
-            <div class="card-text p-1">
-                <ul>
-                    <li>Author: @b.Author</li>
-                    <li>Publisher: @b.Publisher</li>
-                    <li>ISBN: @b.Isbn</li>
-                    <li>Classification/Category: @b.Classification/@b.Category</li>
-                    <li>Number of Pages: @b.PageCount</li>
-                </ul>
-            </div>
-        </div>
-    </div>
-}
+<div class="card-columns d-none d-xl-block">
+    @foreach (Book b in Model.Books)
+    {
+        <partial name="BookSummary" model="b" />
+    }
+</div>
+
+<!-- Use a single column layout on small screens -->
+<div class="d-xl-none">
+    @foreach (Book b in Model.Books)
+    {
+        <partial name="BookSummary" model="b" />
+    }
+</div>
 
 <div page-model="@Model.PageInfo" page-action="Index" page-classes-enabled="true"
      page-class="btn" page-class-normal="btn-outline-dark"
