--- a/BookStore/Pages/Cart.cshtml
+++ b/BookStore/Pages/Cart.cshtml
@@ -14,6 +14,7 @@
             <th>Item</th>            
             <th>Cost</th>
             <th>Subtotal</th>
+            <th></th>
         </tr>
     </thead>
 
@@ -25,6 +26,14 @@
                 <td class="text-left">@i.Book.Title</td>
                 <td class="text-right">@i.Book.Price.ToString("c")</td>
                 <td class="text-right">@((i.Quantity * i.Book.Price).ToString("c"))</td>
+
+                <td class="text-center">
+                    <form method="post" asp-page-handler="Remove">
+                        <input type="hidden" name="bookID" value="@i.Book.BookId" />
+                        <input type="hidden" name="returnUrl" value="@Model.ReturnUrl" />
+                        <button type="submit" class="btn btn-sm btn-danger">Remove</button>
+                    </form>
+                </td>
             </tr>
         }
     </tbody>
