--- a/BookStore/Pages/Cart.cshtml
+++ b/BookStore/Pages/Cart.cshtml
@@ -49,4 +49,5 @@
 
 <div class="text-center">
     <a class="btn btn-primary btn-lg" href="@Model.ReturnUrl">Continue Shopping</a>
+    <a class="btn btn-primary btn-lg" asp-action="Checkout" asp-controller="Payment">Checkout</a>
 </div>
